--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   "dependencies": {
     "react": "^16.0.0",
     "react-bootstrap": "^0.31.3",
-    "react-dom": "^16.0.0"
+    "react-dom": "^16.0.0",
+    "treeview-react-bootstrap": "^0.4.6"
   },
   "scripts": {
     "start": "react-scripts start",
