--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "react": "^16.0.0",
     "react-bootstrap": "^0.31.3",
     "react-dom": "^16.0.0",
+    "react-router-dom": "^4.2.2",
     "treeview-react-bootstrap": "^0.4.6"
   },
   "scripts": {
